# jezenthomas.com

./: .gitattributes  .gitignore  404.html  CNAME  Makefile  README.md  blog_cover_template.psd  default.nix  feed.xml  flake.nix  index.html  jgt.cabal  loadtestertool.xml  package.json  robots.txt  shell.nix  site.hs  sitemap.xml  stack.yaml
20-percent-time-at-supercede/: index.html
a-function-for-moving-to-the-beginning-of-the-line/: index.html
about/: index.html
arcify/: index.html
at-least-roundtrip-serialisation/: index.html
automatic-quality-assurance-with-git-hooks/: index.html
bleep-boop/: index.html
code-review-done-right/: index.html
css/: default.css  header.css  katex.css  skeleton.css  spirograph.css  syntax.css
deploying-a-haskell-web-service-with-nix/: index.html
drafts/: cucumbers-and-purescript.md  git_hooks_outline.md  golfing-at-build-stuff.md  how-to-talk-to-programmers.md  long-live-the-redesign.md  low-fidelity-design-is-about-high-fidelity-thinking.md  microservices.md  quality-control-with-git-hooks.md  real-frontend-developer-interview-questions.md  the-no-asshole-rule.md  tips-for-a-secure-life-on-the-web.md  working-in-darkness.md
fast-counting-with-postgresql-and-haskell/: index.html
folding-paragraphs-in-vim/: index.html
free-internet-on-trains/: index.html
git-is-your-single-point-of-truth/: index.html
hello-world-in-haskell/: index.html
how-i-find-and-replace-in-vim/: index.html
how-i-work-from-anywhere-in-the-world/: index.html
how-i-write-elm-applications/: index.html
how-i-write-invoices-in-vim/: index.html
how-many-levels-of-javascript-are-you-on/: index.html
implementing-csp-in-yesod/: index.html
javascript-is-not-expressive/: index.html
keeping-css-simple/: index.html
on-technical-debt/: index.html
(+243 files in other folders)
