name:               jgt
version:            0.1.0.0
build-type:         Simple
license:            GPL-3
license-file:       LICENSE
cabal-version:      >= 1.10

executable site
  main-is:          Main.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , blaze-html
                  , containers
                  , filepath
  ghc-options:      -threaded
  Hs-source-dirs:   src
  default-language: Haskell2010
