name:          jgt
version:       0.1.0.0
build-type:    Simple
license:       GPL-3
license-file:  LICENSE
cabal-version: >=1.10

executable site
  main-is:          Main.hs
  other-modules:
      Redirects
    , WMentions
  build-depends:
      base                >=4    && <5
    , wreq
    , aeson
    , aeson-pretty
    , lens
    , vector
    , vector-algorithms
    , unix
    , text
    , scientific
    , blaze-html
    , bytestring
    , containers
    , filepath
    , hakyll              >=4.16 && <4.17
    , pandoc
    , pandoc-types
    , pureMD5
    , text
    , time
    , time-locale-compat

  ghc-options:      -threaded
  hs-source-dirs:   src
  default-language: Haskell2010
